<resources>
    <string name="app_name">WeatherApp_hw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mumbai">Mumbai</string>
    <string name="sunny">Sunny</string>
    <string name="_33">33</string>
    <string name="_35">35</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
</resources>